@@ -26,7 +26,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.jta.JtaTransactionManager;
 
-import javax.transaction.UserTransaction;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 
@@ -46,8 +45,9 @@ public class TransactionManagementConfigurer
   private static UserTransactionManager userTransactionManager;
   private static UserTransactionImp userTransaction;
   private static Class<?> enhancerClass;
-  private static Class<?> userTransactionTrackerClass;
+  private static Class<?> transactionManagerClass;
   private static Class<?> transactionManagerTransactionTrackerClass;
+  private static Class<?> userTransactionTrackerClass;
   private static Method enhancerClassSetSuperclassMethod;
   private static Method enhancerClassSetCallbackMethod;
   private static Method enhancerClassCreateMethod;
@@ -73,13 +73,18 @@ public class TransactionManagementConfigurer
       // Retrieve the create method for the net.sf.cglib.proxy.Enhancer class
       enhancerClassCreateMethod = enhancerClass.getMethod("create");
 
-      // Attempt to load the digital.inception.test.UserTransactionTracker class
-      userTransactionTrackerClass = Thread.currentThread().getContextClassLoader().loadClass(
-          "digital.inception.test.UserTransactionTracker");
+      // Attempt to load the javax.transaction.TransactionManager
+      transactionManagerClass = Thread.currentThread().getContextClassLoader().loadClass(
+          "javax.transaction.TransactionManager");
 
       // Attempt to load the digital.inception.test.TransactionManagerTransactionTracker class
       transactionManagerTransactionTrackerClass = Thread.currentThread().getContextClassLoader()
           .loadClass("digital.inception.test.TransactionManagerTransactionTracker");
+
+      // Attempt to load the digital.inception.test.UserTransactionTracker class
+      userTransactionTrackerClass = Thread.currentThread().getContextClassLoader().loadClass(
+          "digital.inception.test.UserTransactionTracker");
+
     }
     catch (ClassNotFoundException | NoSuchMethodException ignored) {}
   }
@@ -99,7 +104,25 @@ public class TransactionManagementConfigurer
   @DependsOn({ "userTransactionManager", "userTransaction" })
   public PlatformTransactionManager transactionManager()
   {
-    return new JtaTransactionManager(userTransaction(), userTransactionManager());
+    try
+    {
+      for (Constructor<?> constructor : JtaTransactionManager.class.getConstructors())
+      {
+        if (constructor.getParameterCount() == 2)
+        {
+          return PlatformTransactionManager.class.cast(constructor.newInstance(userTransaction(),
+              userTransactionManager()));
+        }
+      }
+    }
+    catch (Throwable e)
+    {
+      throw new RuntimeException(
+          "Failed to invoke the required constructor on the org.springframework.transaction.jta.JtaTransactionManager class");
+    }
+
+    throw new RuntimeException(
+        "Failed to find the required constructor on the org.springframework.transaction.jta.JtaTransactionManager class");
   }
 
   /**
@@ -109,7 +132,7 @@ public class TransactionManagementConfigurer
    */
   @Bean
   @DependsOn({ "userTransactionManager" })
-  public UserTransaction userTransaction()
+  public UserTransactionImp userTransaction()
   {
     synchronized (lock)
     {
@@ -119,14 +142,13 @@ public class TransactionManagementConfigurer
         {
           if ((enhancerClass != null) && (userTransactionTrackerClass != null))
           {
-            Object userTransactionEnhancer = enhancerClass.newInstance();
+            Object userTransactionEnhancer = enhancerClass.getConstructor().newInstance();
 
             enhancerClassSetSuperclassMethod.invoke(userTransactionEnhancer,
                 UserTransactionImp.class);
 
             Constructor<?> userTransactionTrackerConstructor =
-                userTransactionTrackerClass.getDeclaredConstructor(javax.transaction
-                .TransactionManager.class);
+                userTransactionTrackerClass.getDeclaredConstructor(transactionManagerClass);
 
             userTransactionTrackerConstructor.setAccessible(true);
 
@@ -136,13 +158,19 @@ public class TransactionManagementConfigurer
             userTransaction = (UserTransactionImp) enhancerClassCreateMethod.invoke(
                 userTransactionEnhancer);
 
-            userTransaction.setTransactionTimeout(300);
+            Method setTransactionTimeoutMethod = UserTransactionImp.class.getMethod(
+                "setTransactionTimeout", Integer.TYPE);
+
+            setTransactionTimeoutMethod.invoke(userTransaction, 300);
           }
           else
           {
             userTransaction = new UserTransactionImp();
 
-            userTransaction.setTransactionTimeout(300);
+            Method setTransactionTimeoutMethod = UserTransactionImp.class.getMethod(
+                "setTransactionTimeout", Integer.TYPE);
+
+            setTransactionTimeoutMethod.invoke(userTransaction, 300);
           }
         }
         catch (Throwable e)
@@ -171,7 +199,7 @@ public class TransactionManagementConfigurer
         {
           if ((enhancerClass != null) && (transactionManagerTransactionTrackerClass != null))
           {
-            Object transactionManagerEnhancer = enhancerClass.newInstance();
+            Object transactionManagerEnhancer = enhancerClass.getConstructor().newInstance();
 
             enhancerClassSetSuperclassMethod.invoke(transactionManagerEnhancer,
                 UserTransactionManager.class);
@@ -187,13 +215,19 @@ public class TransactionManagementConfigurer
             userTransactionManager = (UserTransactionManager) enhancerClassCreateMethod.invoke(
                 transactionManagerEnhancer);
 
-            userTransactionManager.setForceShutdown(false);
+            Method setForceShutdownMethod = UserTransactionManager.class.getMethod(
+                "setForceShutdown", Boolean.TYPE);
+
+            setForceShutdownMethod.invoke(userTransactionManager, false);
           }
           else
           {
             userTransactionManager = new UserTransactionManager();
 
-            userTransactionManager.setForceShutdown(false);
+            Method setForceShutdownMethod = UserTransactionManager.class.getMethod(
+                "setForceShutdown", Boolean.TYPE);
+
+            setForceShutdownMethod.invoke(userTransactionManager, false);
           }
         }
         catch (Throwable e)
